fix:permission_denied_error

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,7 +37,10 @@ jobs:
             echo "Deploying to PRODUCTION server..."
             cd /var/www/laravel_yoga_api
             git pull origin main
+            sudo chown -R ubuntu:www-data .
+            sudo chmod -R 775 storage bootstrap/cache
             composer install --no-interaction --prefer-dist --optimize-autoloader
             sudo chown -R www-data:www-data storage /var/www/laravel_yoga_api/bootstrap/cache
             sudo chmod -R 775 storage /var/www/laravel_yoga_api/bootstrap/cache
             php artisan optimize
+            echo "Deployment Finished!"
